--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
             Dist- Budaun (Uttar Pradesh) Pin - 243601 <br><br>
             <u> MOBILE :-</u> <a href="tel:8218658959">8218658959</a> <br> <br>
             <u> E-MAIL :-</u> <a href="mailto:lalitkumarmca2000@gmail.com">lalitkumarmca2000@gmail.com</a> <br> <br>
-            <u> RESUME :-</u> <a href="LKRESUME2024.docx" download="">Click To Download</a>
+            <u> RESUME :-</u> <a href="LK_RESUME_2024.pdf" download="">Click To Download</a>
 
 
         </div>
