--- a/contact.html
+++ b/contact.html
@@ -69,8 +69,8 @@
             <u> ADDRESS :-</u> Mohan Colony, DM Road, Civil Lines, <br>
             Dist- Budaun (Uttar Pradesh) Pin - 243601 <br><br>
             <u> MOBILE :-</u> <a href="tel:8218658959">8218658959</a> <br> <br>
-            <u> E-MAIL :-</u> <a href="mailto:lalitkumarmca2000@gmail.com">lalitkumarmca2000@gmail.com</a> <br> <br>
-            <u> RESUME :-</u> <a href="LK_RESUME_2024.pdf" download="">Click To Download</a>
+            <u> E-MAIL :-</u> <a href="mailto:lalitkumarmcaofficial@gmail.com">lalitkumarmcaofficial@gmail.com</a> <br> <br>
+            <u> RESUME :-</u> <a href="LK_RESUME.pdf" download="">Click To Download</a>
 
 
         </div>
